bugfix stuck screen because of state update 2

--- a/src/BottleContainer.module.css
+++ b/src/BottleContainer.module.css
@@ -26,8 +26,3 @@
   box-shadow: 0 0 25px white;
  }
 
-.complete{
- /*   opacity: 0.5;
-  background-color: rgb(128, 128, 128) !important; 
-  filter: invert(86%) sepia(0%) saturate(0%) hue-rotate(141deg) brightness(86%) contrast(90%);*/
-}
